# qemu-embedded-board-ui

./: .gitignore  Cargo.toml  README.MD
resources/: prova.kicad_sch
src/: main.rs  schematic_serializer.rs
