[package]
name = "qemu-embedded-board-ui"
version = "0.1.0"
authors = ["eugen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

iced = {version = "0.3", features = ["svg"] }
qapi = {version = "0.7.0", features = [ "qmp" ] }
rand = {version = "0.8.3"}
serde-lexpr = "0.1.2"